[gd_scene load_steps=6 format=2]

[ext_resource path="res://Merriweather-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Timer App.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 109
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="Timer App" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
alignment = 1

[node name="TimerWheels" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 218.0
margin_right = 984.0
margin_bottom = 268.0
size_flags_vertical = 6
custom_constants/separation = 20
alignment = 1

[node name="Hours" type="SpinBox" parent="VBoxContainer/TimerWheels"]
margin_left = 322.0
margin_right = 422.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
max_value = 23.0
align = 1
suffix = "Hours"

[node name="Minutes" type="SpinBox" parent="VBoxContainer/TimerWheels"]
margin_left = 442.0
margin_right = 542.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 0 )
max_value = 59.0
align = 1
suffix = "Minutes"

[node name="Seconds" type="SpinBox" parent="VBoxContainer/TimerWheels"]
margin_left = 562.0
margin_right = 662.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 0 )
max_value = 59.0
align = 1
suffix = "Seconds"

[node name="Countdown" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 174.0
margin_right = 984.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "00:00:00:00"
align = 1
valign = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 490.0
margin_right = 984.0
margin_bottom = 560.0
custom_constants/separation = 50
alignment = 1

[node name="StartStop" type="Button" parent="VBoxContainer/ButtonContainer"]
margin_right = 984.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="Reset" type="Button" parent="VBoxContainer/ButtonContainer"]
visible = false
margin_left = 517.0
margin_right = 984.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "RESET"

[node name="CountdownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="VBoxContainer/ButtonContainer/StartStop" to="." method="_on_StartStop_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
